# slai_example

./: .gitignore  Model Exploration.ipynb  README.md  app.py  jupyter.sh  pyproject.toml  requirements.txt  run.sh  server.py
.jupyter/: jupyter_notebook_config.py
.jupyter/custom/: custom.css  custom.js
static/: calculator.js  index.html
