[tool.poetry]
name = "slai_example"
version = "0.1.0"
description = "Example app leveraging the Slai SDK\u0001\u0005"
authors = ["Mike Risse <rissem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
slai = "^0.1.62"
pandas = "^1.4.0"
jupyterlab = "^3.2.8"
Flask = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
